--- a/client/src/components/VistaPrincipal.css
+++ b/client/src/components/VistaPrincipal.css
@@ -1,4 +1,8 @@
-.sidenav{
+.bodymain{
+        display: flex;
+}
+
+.sidebar{
         box-shadow: 1px 0px 20px rgba(0, 0, 0, 0.08);
         position: fixed;
         width: 240px;
@@ -7,19 +11,36 @@
         background: #ffffff;
         z-index: 99;
         height: 100%;
+        position: fixed;
+        top: 0;
+        
+}
+
+.sidebar h2,p,i{
+background-color: white;
 }
 
 .content{
-        width: 70%;
-        float: left;
+        justify-content: center;
+        width: 50%;
         padding: 0 40px;
 }
 
 .cardEvent{
     background: #ffffff;
+    position: relative;
+    left: 50%;
     padding: 15px;
     display: block;
     overflow: hidden;
-    margin-bottom: 15px;
+    margin: 80px 15px;
 }
 
+.img-circle{
+        border-radius: 50%;
+        width:90%;
+}
+
+*{
+            background: #edf1f5;
+}
