Separacion login y pagina principal,showEvents completo

--- a/client/src/components/VistaPrincipal.css
+++ b/client/src/components/VistaPrincipal.css
@@ -42,5 +42,9 @@ background-color: white;
 }
 
 *{
-            background: #edf1f5;
+        background: #edf1f5;
+}
+
+.boxEvent{
+        margin: 10px;
 }
