--- a/client/src/components/VistaPrincipal.css
+++ b/client/src/components/VistaPrincipal.css
@@ -1,10 +1,10 @@
-.bodymain{
+.bodyMain {
         display: flex;
+       
 }
 
 .sidebar{
         box-shadow: 1px 0px 20px rgba(0, 0, 0, 0.08);
-        position: fixed;
         width: 240px;
         top: 0px;
         padding: 50px 10px 0px 10px;
@@ -16,9 +16,7 @@
         
 }
 
-.sidebar h2,p,i{
-background-color: white;
-}
+
 
 .content{
         justify-content: center;
@@ -27,7 +25,7 @@ background-color: white;
 }
 
 .cardEvent{
-    background: #ffffff;
+    background: #EDF1F5;
     position: relative;
     left: 50%;
     padding: 15px;
@@ -42,7 +40,11 @@ background-color: white;
 }
 
 .boxEvent{
-        margin: 10px;
+            background: #ffffff;
+            padding: 15px;
+            display: block;
+            overflow: hidden;
+            margin-bottom: 15px;
 }
 
 .map{
