--- a/client/src/components/event/ModalMoreInfo.css
+++ b/client/src/components/event/ModalMoreInfo.css
@@ -4,16 +4,21 @@
 }
 
 .modal{
-    margin: 270px;
-    width: 700px;
+    margin: 300px;
+    width: 800px;
     border-radius: 33px 33px 33px 33px;
     -moz-border-radius: 33px 33px 33px 33px;
     -webkit-border-radius: 33px 33px 33px 33px;
     border: 2px solid #000000;
-    -webkit-box-shadow: 10px 6px 16px 0px rgba(0, 0, 0, 0.97);
-    -moz-box-shadow: 10px 6px 16px 0px rgba(0, 0, 0, 0.97);
+    font-size: 20px;
    display: flex;
+   background-color:white;
 
+}
+
+.modal-content{
+    height: 100%;
+    
 }
 
 .closeModal{
