--- a/client/src/components/VistaPrincipal.css
+++ b/client/src/components/VistaPrincipal.css
@@ -25,7 +25,7 @@
 }
 
 .cardEvent{
-    background: #EDF1F5;
+    background:#EDF1F5;
     position: relative;
     left: 50%;
     padding: 15px;
@@ -52,7 +52,8 @@
 .imgUser {
         border-radius: 50%;
         font-size: 30px;
-        width: 20%;
+        width: 80px;
+        height: 90px;
         float: left;
 }
 
@@ -63,9 +64,41 @@
 
 .data-post h3{
         margin: 15px;
+        
 }
 
 .link{
         text-decoration: none;
         color: black;
+}
+
+.formCreateEvent{
+        width: 620px;
+        margin-left: 20px;
+}
+
+.formCreateEvent input {
+        margin: 10px;
+        width: 300px;
+        height: 30px;
+        text-align: center;
+        border-radius: 53px 54px 54px 54px;
+        -moz-border-radius: 53px 54px 54px 54px;
+        -webkit-border-radius: 53px 54px 54px 54px;
+        border: 18px;
+}
+
+.row{
+       margin-right: 15px;
+       padding-left: 15px;
+       margin-bottom: -8px;
+}
+
+
+.col-sm-2{
+        width: 16.66666667%;
+}
+
+.col-xs-3 {
+        width: 25%;
 }
